Fixes jumping scrollbar (#107)

--- a/www/app/globals.css
+++ b/www/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/* #102 Fixes jumping scrollbar */
+/* https: //aykevl.nl/2014/09/fix-jumping-scrollbar */
+html {
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
+}
+
 @layer base {
   body {
     @apply bg-gray-100;
